# ai-plex-renamer

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
scripts/: dry-run-windows.bat  pyinstaller_entry.py
src/ai_plex_renamer/: ai.py  cli.py  debug.py  guessit_parser.py  heuristics.py  http_client.py  models.py  naming.py  renamer.py  tmdb.py
src/duck_ai_plex_renamer/: __init__.py  ai.py  cli.py  renamer.py  tmdb.py
tests/: test_ai.py  test_debug.py  test_guessit_parser.py  test_heuristics.py  test_http_client.py  test_naming.py  test_tmdb.py
