[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-plex-renamer"
version = "0.1.0"
description = "Rename movies and TV episodes to Plex-friendly file names with GuessIt, TMDB, and NVIDIA AI fallback."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "guessit>=3.8.0",
]

[project.scripts]
ai-plex-renamer = "ai_plex_renamer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
